@@ -2949,23 +2949,10 @@ int update_line(filestruct *fileptr, size_t index)
     return extralinesused;
 }
 
-/* Return TRUE if we need an update after moving horizontally, and FALSE
- * otherwise.  We need one if the mark is on or if pww_save and
- * placewewant are on different pages. */
-bool need_horizontal_update(size_t pww_save)
-{
-    return
-#ifndef NANO_TINY
-	openfile->mark_set ||
-#endif
-	get_page_start(pww_save) !=
-	get_page_start(openfile->placewewant);
-}
-
-/* Return TRUE if we need an update after moving vertically, and FALSE
- * otherwise.  We need one if the mark is on or if pww_save and
- * placewewant are on different pages. */
-bool need_vertical_update(size_t pww_save)
+/* Return TRUE if we need an update after moving the cursor, and
+ * FALSE otherwise.  We need an update if the mark is on, or if
+ * pww_save and placewewant are on different pages. */
+bool need_screen_update(size_t pww_save)
 {
     return
 #ifndef NANO_TINY
@@ -3012,14 +2999,11 @@ void edit_scroll(scroll_dir direction, ssize_t nlines)
 {
     ssize_t i;
     filestruct *foo;
-    bool do_redraw = FALSE;
+    bool do_redraw = need_screen_update(0);
 
     /* Don't bother scrolling less than one line. */
     if (nlines < 1)
 	return;
-
-    if (need_vertical_update(0))
-	do_redraw = TRUE;
 
     /* Part 1: nlines is the number of lines we're going to scroll the
      * text of the edit window. */
@@ -3122,9 +3106,8 @@ void edit_scroll(scroll_dir direction, ssize_t nlines)
  * updated.  Use this if we've moved without changing any text. */
 void edit_redraw(filestruct *old_current, size_t pww_save)
 {
-    bool do_redraw = need_vertical_update(0) ||
-	need_vertical_update(pww_save);
     filestruct *foo = NULL;
+    bool do_redraw = need_screen_update(0) || need_screen_update(pww_save);
 
     /* If either old_current or current is offscreen, scroll the edit
      * window until it's onscreen and get out. */
